--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -11,19 +11,27 @@ By the end of the chapter, students will be able to:
     - absolute file path
     - relative file path
     - url
+* read data into R using a relative path and a url
+* compare and contrast the following functions:
+    - `read_csv` 
+    - `read_tsv`
+    - `read_csv2`
+    - `read_delim`
+    - `read_excel`
 * match the following `tidyverse` `read_*` function arguments to their descriptions:
-    - `file`
+    - `file` 
     - `delim`
     - `col_names`
     - `skip`
-* choose the appropriate `tidyverse` `read_*` function and function arguments to load a given tabular data set into R
+* choose the appropriate `tidyverse` `read_*` function and function arguments to load a given plain text tabular data set into R
 * use `readxl` library's `read_excel` function and arguments to load a sheet from an excel file into R
-* use the `DBI` library's `dbconnect` fucntion to connect to a SQLite database file, and query that file using functions the `dbplyr` library
+* connect to a database using the `DBI` library's `dbConnect` function
+* list the tables in a database using the `RSQLite` library's `dbListTables` function
+* create a table object using the `tbl` function and query the database using functions from the `dbplyr` library
 
-*Bonus material for this week:*
-
-* use the `rvest` library's `html_nodes`, `html_text` and `html_attr` functions to scrape data from a `.html` file on the web
-* compare downloading tabular data from a plain text file (e.g., `.csv`) from the web versus scraping data from a `.html` file
+* *optional*: scrape data from the web
+  * read/scrape data from an internet URL using the rvest `html_nodes` and `html_text` functions
+  * compare downloading tabular data from a plain text file (e.g. *.csv) from the web versus scraping data from a .html file
 
 ## Absolute and relative file paths
 
