--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -11,6 +11,7 @@ choose the parameters of the classifier in order to maximize its accuracy.
 ## Chapter learning objectives 
 - Recognize situations where a classifier would be appropriate for making predictions
 - Describe what a training data set is and how it is used in classification
+- Identify when it is necessary to center and scale variables before classification and do this using R
 - Interpret the output of a classifier
 - Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two explanatory variables/predictors
 - Explain the k-nearest neighbour classification algorithm
@@ -36,17 +37,19 @@ networks.
 ## Exploring a labelled data set
 
 In this chapter and the next, we will study a data set of [digitized breast cancer image features](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29), 
-created by Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian at the University of Wisconsin, Madison. Each row in the data set represents an 
-observation of a tumour cell nucleus, including the diagnosis (benign or malignant) and several other measurements 
-(e.g., nucleus texture, perimeter, area, etc.). Diagnosis of each cell was conducted by physicians. 
+created by Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian at the University of Wisconsin, Madison. Each row in the data set represents an image of a tumour sample, 
+including the diagnosis (benign or malignant) and several other measurements 
+(e.g., nucleus texture, perimeter, area, etc.). Diagnosis for each image was conducted by physicians. 
 
-As with all data analyses, we first need to formulate a precise question that we want to answer. Here, the question is of a *predictive* nature: can 
-we use some, or all, of the measurements available to us about the tumour cells to do a good job of predicting whether a future tumour cell (with unknown diagnosis)
-is benign or malignant? Answering this question is important because traditional, non-data-driven methods for tumour diagnosis are quite subjective and 
+As with all data analyses, we first need to formulate a precise question that we want to answer. Here, the question is *predictive*: can 
+we use the tumour image measurements available to us to predict whether a future tumour image (with unknown diagnosis)
+shows a benign or malignant tumour? Answering this question is important because traditional, non-data-driven methods for tumour diagnosis are quite subjective and 
 dependent upon how skilled and experienced the diagnosing physician is. Furthermore, benign tumours are not normally dangerous; the cells stay in the same 
 place and the tumour stops growing before it gets very large. By contrast, in malignant tumours, the cells invade the surrounding tissue and spread into nearby organs 
 where they can cause serious damage ([learn more about cancer here](https://www.worldwidecancerresearch.org/who-we-are/cancer-basics/)). Thus, it is important to quickly 
-and accurately diagnose the tumour type to guide patient treatment protocols.
+and accurately diagnose the tumour type to guide patient treatment.
+
+**Loading the data**
 
 Our first step is to load, wrangle, and explore the data using visualizations in order to better understand the data we are working with.
 We start by loading the necessary libraries for our analysis. Below you'll see (in addition to the usual `tidyverse`) a new library, `forcats`, that 
@@ -68,12 +71,13 @@ head(cancer)
 
 **Variable descriptions**
 
-Breast tumours can be diagnosed by performing a biopsy, a process where tissue is removed from the body to discover the presence of a disease. Traditionally these procedures were quite invasive, but now fine needle asipiration is a type of biopsy that uses a thin needle to examine a small amount of tissue from the tumour. With this method, 10 different variables are typically measured of cell nuclei from a digital image of a fine needle aspirate (FNA) of a breast mass. 
+Breast tumours can be diagnosed by performing a *biopsy*, a process where tissue is removed from the body to diagnose the presence of a disease. Traditionally these procedures 
+were quite invasive; modern methods such as fine needle asipiration, used to collect the present data set, extract only a small amount of tissue and are less invasive. Based
+on a digital image of each breast tissue sample collected for this data set, 10 different variables were measured for each cell nucleus in the image (3-12 below), and then
+the mean of the three largest values for each variable across the nuclei was recorded. As part of the data preparation, these values have been *scaled*; we will discuss what this means 
+and why we do it later in this chapter. Each image additionally was given a unique ID and a diagnosis for malignance by a physician.
+ Therefore, the total set of variables per image in this data set are:
 
-
-![Source: https://www.semanticscholar.org/paper/Breast-Cancer-Diagnosis-and-Prognosis-Via-Linear-P-Mangasarian-Street/3721bb14b16e866115c906336e9d70db096c05b9/figure/0](https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/3721bb14b16e866115c906336e9d70db096c05b9/1-Figure1-1.png  "A magnified image of a malignant breast Fine Needle Aspiration.")
-
-A magnified image of a malignant breast Fine Needle Aspiration image. White lines denote the boundary of the cell nuclei.
 
 1. ID number 
 2. Class - diagnosis (M = malignant, B = benign) 
@@ -88,22 +92,26 @@ A magnified image of a malignant breast Fine Needle Aspiration image. White line
 11. symmetry 
 12. fractal dimension ($"coastline\: approximation" - 1$)
 
-The "worst" (mean of the three largest values) values of these variable were computed for each image. As part of the data preparation, the data have been scaled (we will discuss what this means and why we do it in the next chapter).
+![A magnified image of a malignant breast fine needle aspiration image. White lines denote the boundary of the cell nuclei. Source: https://www.semanticscholar.org/paper/Breast-Cancer-Diagnosis-and-Prognosis-Via-Linear-P-Mangasarian-Street/3721bb14b16e866115c906336e9d70db096c05b9/figure/0](https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/3721bb14b16e866115c906336e9d70db096c05b9/1-Figure1-1.png  "A magnified image of a malignant breast fine needle aspiration.")
 
-Below we use `glimpse` to preview the data frame. This function is similar to head, but can be easier to read when we have a lot of columns:
+
+Below we use `glimpse` to preview the data frame. This function is similar to `head`, but can be easier to read when we have a lot of columns:
 
 ```{r 05-glimpse}
 glimpse(cancer)
 ```
 
-We can see from the summary of the data above that `Class` is of type character. We are going to be working with `Class` as a categorical statistical variable so we will convert it to factor using the function `as.factor`.
+We can see from the summary of the data above that `Class` is of type character (denoted by `<chr>`). Since we are going to be working with `Class` as a categorical statistical 
+variable, we will convert it to factor using the function `as.factor`.
 
 ```{r 05-class, echo = TRUE}
 cancer <- cancer %>% 
   mutate(Class = as.factor(Class)) 
 ```
 
-Factors have what are called "levels", which you can think of as categories. We can ask for the levels from the `Class` column by using the `levels` function. This function should return the name of each category in that column. Given that we only have 2 different values in our `Class` column, "B" and "M", we only expect to get two names back. If we had 4 difference values in the column, we would expect to get 4 back. *Note the use of `unlist` to between `select` and `levels`. This is because `select` outputs a data frame (even though we only select a single column), and levels expects a vector.*
+Factors have what are called "levels", which you can think of as categories. We can ask for the levels from the `Class` column by using the `levels` function. This function should return 
+the name of each category in that column. Given that we only have 2 different values in our `Class` column ("B" and "M"), we only expect to get two names back. If we had 4 different values 
+in the column, we would expect to get 4 back. *Note the use of `unlist` to between `select` and `levels`. This is because `select` outputs a data frame (even though we only select a single column), and levels expects a vector.*
 
 ```{r 05-levels, echo = TRUE}
 cancer %>% 
@@ -112,7 +120,9 @@ cancer %>%
   levels()
 ```
 
-Before we start doing any modelling, Let's explore out dataset. Below we use the `tidyverse`'s `group_by` + `summarize` function to see that we have 357 (63\%) benign and 212 (37\%) malignant tumour observations.
+**Exploring the data**
+
+Before we start doing any modelling, let's explore our dataset. Below we use the `group_by` + `summarize` code pattern we used before to see that we have 357 (63\%) benign and 212 (37\%) malignant tumour observations.
 
 ```{r 05-tally}
 num_obs <- nrow(cancer)
@@ -122,7 +132,8 @@ cancer %>%
             percentage = n() / num_obs * 100)
 ```
 
-Next, let's draw a scatter plot to visualize the relationship between the perimeter and concavity variables. To avoid `ggplot's` default pallete, we define our own here and specify to use it in the `scale_color_manual` function. In that function we also make the category labels of "B" and "M" something more readable, "Benign" and "Malignant", respectively.
+Next, let's draw a scatter plot to visualize the relationship between the perimeter and concavity variables. Rather than use `ggplot's` default palette, we define our own here (`cbPalette`) and pass it 
+as the `values` argument to the `scale_color_manual` function. We also make the category labels ("B" and "M") more readable by changing them to "Benign" and "Malignant" using the `labels` argument.
 
 ```{r 05-scatter, fig.height = 4, fig.width = 5}
 # colour palette
@@ -136,11 +147,13 @@ perim_concav <- cancer %>%
 perim_concav
 ```
 
-In this visualization, we can see that the observations that are labelled as benign, typically fall in the the lower, left-hand side of the plot area. Whereas, the observations that are labelled as malignant typically fall in upper right-hand side of the plot. Suppose we have a new observation that is not in the current data set that we plotted and we do not have a Physician's diagnosis for the tumour class. But what is we knew this new observation had a perimeter value of 1 and concavity value of 1. Could we use this information to classify that observation as benign or malignant? What about a new observation with perimeter value of -1 and concavity value of -0.5? What about 0 and 1? It seems like we can do this, at least visually. Now we will explore how we can use the K-Nearest Neighbour classification method to do this using R.
+In this visualization, we can see that benign observations typically fall in the the lower left-hand side of the plot area. By contrast, malignant observations typically fall in upper right-hand side of 
+the plot. Suppose we obtain a new observation not in the current data set that has all the variables measured *except* the label (i.e., an image without the physician's diagnosis for the tumour class). We
+could compute the perimeter and concavity values, resulting in values of, say, 1 and 1. Could we use this information to classify that observation as benign or malignant? What about a new 
+observation with perimeter value of -1 and concavity value of -0.5? What about 0 and 1? It seems like the *prediction of an unobserved label* might be possible, based on our visualization. 
+In order to actually do this computationally in practice, we will need a classification algorithm; here we will use the K-nearest neighbour classification algorithm.
 
 ## Classification with K-nearest neighbours
-
-### Two explanatory variables / features / predictors
 
 ```{r 05-knn-0, echo = F}
 ## Find the distance between new point and all others in dataset
@@ -169,18 +182,21 @@ attrs <- c("Perimeter", "Concavity")
 my_distances <- table_with_distances(cancer[,attrs], new_point)
 neighbours <- cancer[order(my_distances$Distance),]
 ```
-To classify a new observation as benign or malignant, we find some observations in the training set that are "nearest" to our new observation, and then use their diagnoses (benign or malignant) to make a prediction for the new observation's diagnosis. 
+To predict the label of a new observation, i.e., classify it as either benign or malignant, the K-nearest neighbour classifier generally finds the $K$ "nearest" or "most similar" 
+observations in our training set, and then uses their diagnoses to make a prediction for the new observation's diagnosis. To illustrate this concept, we will walk through an example.
+Suppose we have a new observation, with perimeter of `r new_point[1]` and concavity of `r new_point[2]` (labelled in red on the scatterplot), whose diagnosis "Class" is unknown.
 
-Let's walk through an example; suppose we have a new observation, with perimeter of `r new_point[1]` and concavity of `r new_point[2]` (labelled in red on the scatterplot), whose diagnosis "Class" is unknown.
-
+<center>
 ```{r 05-knn-1, echo = FALSE, fig.height = 4, fig.width = 5}
 perim_concav + 
   geom_point(aes(x=new_point[1], y=new_point[2]), color=cbPalette[6], size = 2.5) 
 ```
+</center>
 
-We see that the nearest point to this new observation is located at the coordinates (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`). The idea here is that if a point is close to one another in the scatterplot then the perimeter and concavity values are similar so we may expect that they would have the same diagnosis. 
+We see that the nearest point to this new observation is **malignant** and located at the coordinates (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`). The idea here is that if 
+a point is close to another in the scatterplot, then the perimeter and concavity values are similar, and so we may expect that they would have the same diagnosis. 
 
-
+<center>
 ```{r 05-knn-2, echo = FALSE, fig.height = 4, fig.width = 5}
 perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]), 
                color=cbPalette[6], 
@@ -190,6 +206,7 @@ perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]),
                    xend = unlist(neighbours[1, attrs[1]]), 
                    yend = unlist(neighbours[1, attrs[2]])), color = "black")
 ```
+</center>
 
 ```{r 05-knn-3, echo = FALSE}
 new_point <- c(0.38, 1.8)
@@ -198,8 +215,11 @@ my_distances <- table_with_distances(cancer[,attrs], new_point)
 neighbours <- cancer[order(my_distances$Distance),]
 ```
 
-Suppose we have another new observation with perimeter `r new_point[1]` and concavity of `r new_point[2]`. Looking at the scatterplot below, how would you classify this red observation? The nearest neighbour to this new point is a **benign** observation at (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`). Does this seem like the right prediction to make? Probably not if you consider the other nearby points...
+Suppose we have another new observation with perimeter `r new_point[1]` and concavity of `r new_point[2]`. Looking at the scatterplot below, how would you classify this red observation? The 
+nearest neighbour to this new point is a **benign** observation at (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`). Does this seem like the right prediction to make? Probably not, 
+if you consider the other nearby points...
 
+<center>
 ```{r 05-knn-4, echo = FALSE, fig.height = 4, fig.width = 5}
 perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]), 
                color=cbPalette[6], 
@@ -209,11 +229,14 @@ perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]),
                    xend = unlist(neighbours[1, attrs[1]]), 
                    yend = unlist(neighbours[1, attrs[2]])), color = "black")
 ```
+</center>
 
-So instead of just using the one nearest neighbour, we can consider several neighbouring points, say $k = 3$, that are closest to the new red observation to predict its diagnosis class. Among those 3 closest points, we look at their class and use the majority class as our prediction for the new observation. 
+So instead of just using the one nearest neighbour, we can consider several neighbouring points, say $K = 3$, that are closest to the new red observation to predict its diagnosis class. Among those 3 closest 
+points, we use the *majority class* as our prediction for the new observation. In this case, we see that the diagnoses of 2 of the 3 nearest neighbours to our new 
+observation are malignant. Therefore we take majority vote and classify our new red observation as malignant. 
+<!-- For our red observation at (`r new_point`), the nearest points are: (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`), (`r round(neighbours[2,  c(attrs[1], attrs[2])],1)`), and (`r round(neighbours[3, c(attrs[1], attrs[2])],1)`). -->
 
-We see that the diagnoses of 2 of the 3 nearest neighbours to our new observation are malignant so we take majority vote and classify our new red observation as malignant. <!-- For our red observation at (`r new_point`), the nearest points are: (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`), (`r round(neighbours[2,  c(attrs[1], attrs[2])],1)`), and (`r round(neighbours[3, c(attrs[1], attrs[2])],1)`). -->
-
+<center>
 ```{r 05-knn-5, echo =  FALSE, fig.height = 4, fig.width = 5}
 perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]), 
                color=cbPalette[6], 
@@ -228,6 +251,7 @@ perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]),
                    xend = unlist(neighbours[3, attrs[1]]),
                    yend = unlist(neighbours[3, attrs[2]])), color = "black")
 ```
+</center>
 
 
 
@@ -237,18 +261,24 @@ perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]),
 #  slice(1:3)
 ```
 
-Here we chose the $k=3$ nearest observations, but there is nothing special about $k=3$. We could have used $k=4, 5$ or more, though we may want to choose an odd number to avoid ties. We will discuss more about choosing $k$ in the next section. 
+Here we chose the $K=3$ nearest observations, but there is nothing special about $K=3$. We could have used $K=4, 5$ or more (though we may want to choose an odd number 
+to avoid ties). We will discuss more about choosing $K$ in the next chapter. 
 
-**Distance Between Points When There are two explanatory variables/predictors**
+**Distance between points** 
 
-How do we decide which points are "nearest" to our new observation? We can compute the distance between any pair of points using the following formula: 
+How do we decide which points are the $K$ "nearest" to our new observation? We can compute the distance between any pair of points using the following formula: 
 
-$$Distance = \sqrt{(x_a -x_b)^2 + (y_a - y_b)^2}$$
+$$\mathrm{Distance} = \sqrt{(x_a -x_b)^2 + (y_a - y_b)^2}$$
 ```{r 05-multiknn-0, echo =F}
 new_point <- c(-1,4.2)
 ```
-Suppose we want to classify a new observation with perimeter of `r new_point[1]` and concavity of `r new_point[2]`. Let's calculate the distances between our new point and each of the observations in the training set to find the $k=5$ observations in the training data that are nearest to our new point. 
 
+> This formula -- sometimes called the *Euclidean distance* -- is simply the straight line distance between two points on the x-y plane with coordinates $(x_a, y_a)$ and $(x_b, y_b)$.
+
+Suppose we want to classify a new observation with perimeter of `r new_point[1]` and concavity of `r new_point[2]`. Let's calculate the distances between our 
+new point and each of the observations in the training set to find the $K=5$ observations in the training data that are nearest to our new point. 
+
+<center>
 ```{r 05-multiknn-1, echo = F, fig.height = 4, fig.width = 5}
 perim_concav <- cancer %>%    
   ggplot(aes(x=Perimeter, y=Concavity, color = Class)) + 
@@ -260,6 +290,7 @@ perim_concav <- cancer %>%
     geom_point(aes(x=new_point[1], y=new_point[2]), color=cbPalette[6], size = 2.5) 
 perim_concav
 ```
+</center>
 
 
 ```{r 05-multiknn-2}
@@ -273,6 +304,7 @@ cancer %>% select(ID, Perimeter, Concavity, Class) %>%
 
 From this, we see that 3 of the 5 nearest neighbours to our new observation are malignant so classify our new observation as malignant. We circle those 5 in the plot below:
 
+<center>
 ```{r 05-multiknn-3, echo = FALSE}
 perim_concav + annotate("path", 
                         x=new_point[1] + 1.7 * cos(seq(0,2 * pi, 
@@ -280,6 +312,7 @@ perim_concav + annotate("path",
                         y=new_point[2] + 1.7 * sin(seq(0,2 * pi, 
                                                        length.out = 100)))
 ```
+</center>
 
 ```{r 05-multiknn-4, echo = FALSE}
 my_distances <- table_with_distances(cancer[,attrs], new_point)
@@ -290,28 +323,39 @@ tab <- data.frame(neighbours[1:k,], cancer[order(my_distances$Distance),][1:k,c(
 
 It can be difficult sometimes to read code as math, so here we mathematically show the calculation of distance for each of the 5 closest points.
 
- | ID                      |Perimeter | Concavity | Distance          | Class          |
- | --------------------  |----------------- | -----------------    | ---------------| ----------------- |
-| `r tab[1,4] `       | `r round(tab[1,1],2) `              	| `r round(tab[1,2],2) `             |$\sqrt{-1  - (-1.24))^2 + (4.2 - 4.7)^2}=$ `r round(neighbours[1, "Distance"],2)` |	`r tab[1, "Class"]`  | 
-| `r tab[2,4] `       |`r round(tab[2,1],2) `              |`r round(tab[2,2],2) `               |$\sqrt{(-1 - (-0.29))^2 + (4.2 - 3.99)^2} =$ `r round(neighbours[2, "Distance"],2)`	|`r tab[2, "Class"]`  |
-| `r tab[3,4] `       |`r round(tab[3,1],2) `              |`r round(tab[3,2],2) `        | $\sqrt{(-1 - (-1.08))^2 + (4.2 - 2.63)^2} =$ `r round(neighbours[3, "Distance"],2)` | `r tab[3, "Class"]`|
-| `r tab[4,4] `       |`r round(tab[4,1],2) `              |`r round(tab[4,2],2) `        | $\sqrt{(-1 - (-0.46))^2 + (4.2 - 2.72)^2} =$ `r round(neighbours[4, "Distance"],2)` | `r tab[4, "Class"]`|
-| `r tab[5,4] `       |`r round(tab[5,1],2) `              |`r round(tab[5,2],2) `        | $\sqrt{(-1 - 0.64)^2 + (4.2 - 4.3)^2} =$ `r round(neighbours[5, "Distance"],2)` | `r tab[5, "Class"]`|
------------------  -----------------     ----------------- ----------------- 
+|Perimeter | Concavity | Distance          | Class          |
+ |----------------- | -----------------    | ---------------| ----------------- |
+| `r round(tab[1,1],2) `              	| `r round(tab[1,2],2) `             |$\sqrt{-1  - (-1.24))^2 + (4.2 - 4.7)^2}=$ `r round(neighbours[1, "Distance"],2)` |	`r tab[1, "Class"]`  | 
+|`r round(tab[2,1],2) `              |`r round(tab[2,2],2) `               |$\sqrt{(-1 - (-0.29))^2 + (4.2 - 3.99)^2} =$ `r round(neighbours[2, "Distance"],2)`	|`r tab[2, "Class"]`  |
+|`r round(tab[3,1],2) `              |`r round(tab[3,2],2) `        | $\sqrt{(-1 - (-1.08))^2 + (4.2 - 2.63)^2} =$ `r round(neighbours[3, "Distance"],2)` | `r tab[3, "Class"]`|
+|`r round(tab[4,1],2) `              |`r round(tab[4,2],2) `        | $\sqrt{(-1 - (-0.46))^2 + (4.2 - 2.72)^2} =$ `r round(neighbours[4, "Distance"],2)` | `r tab[4, "Class"]`|
+|`r round(tab[5,1],2) `              |`r round(tab[5,2],2) `        | $\sqrt{(-1 - 0.64)^2 + (4.2 - 4.3)^2} =$ `r round(neighbours[5, "Distance"],2)` | `r tab[5, "Class"]`|
+-----------------     ----------------- ----------------- 
 
 
-**Summary:**
+**Summary**
 
-In order to classify a new observation using a k-nearest neighbor classifier, we have to do the follow steps:
+In order to classify a new observation using a K-nearest neighbour classifier, we have to:
 
-* **Step 1**: Compute the distance between the new observation and each observation in our training set.
-* **Step 2**: Sort the data table in ascending order according to the distances.
-* **Step 3**: Choose the top $k$ rows of the sorted table.
-* **Step 4**: Classify the new observation based on majority vote.
+1. Compute the distance between the new observation and each observation in the training set
+2. Sort the data table in ascending order according to the distances
+3. Choose the top $K$ rows of the sorted table
+4. Classify the new observation based on a majority vote of the neighbour classes
 
+**More than two explanatory variables**
 
-### More than two explanatory variables / features / predictors
-So far we have seen how to build a classifier based on only explanatory variables/predictors, but we can use the k-nearest neighbours classifier in higher dimensional space. Let's make a scatterplot with 3 variables instead of 2: 
+Although the above description is directed toward two explanatory variables / predictors, exactly the same K-nearest neighbour algorithm applies 
+when you have a higher number of explanatory variables (i.e., a higher-dimensional predictor space). 
+Each explanatory variable/predictor can give us new information to help create our classifier.
+The only difference is the formula for the distance between points. In particular, let's say we have $m$ predictor variables for two observations $u$ and $v$,
+i.e., 
+$u = (u_{1}, u_{2}, \dots, u_{m})$ and
+$v = (v_{1}, v_{2}, \dots, v_{m})$.
+Before, we added up the squared difference between each of our (two) variables, and then took the square root; now we will do the same, except for *all* of our $m$ variables.
+In other words, the distance formula becomes
+
+$$Distance = \sqrt{(u_{1} -v_{1})^2 + (u_{2} - v_{2})^2 + \dots + (u_{m} - v_{m})^2}$$
+
 
 ```{r 05-more, echo = F}
 library(plotly)
@@ -331,27 +375,17 @@ plot_ly(x = ~ Perimeter,
 
 *Normally we recommend against 3D plots, but here for learning purposes we want to illustrate what happens when we go to higher dimensions.*
 
-Each explanatory variable/predictor can give us new information to help create our classifier. The distance formula for 3-dimensions is
-$$Distance = \sqrt{(x_a -x_b)^2 + (y_a - y_b)^2 + (z_a - z_b)^2}$$
-We can generalize for n-dimensions by
 
-* summing up the squares of the differences between each individual coordinate
-* taking the square root of the sum
+## Shifting and scaling the data
 
-
-## Scaling the data
-
-TODO
+[TODO]
 
 ## K-nearest neighbours in R
 
-**Training**
-
-**Making Predictions**
-
-- [The `caret` Package](https://topepo.github.io/caret/index.html)
-
-We will use the k-nearest neighbour (k-nn) algorithm in R by making use of the `caret` (Classification And REgression Training) package. `caret`  contains a set of tools to help the process of making predictive models. Why do we now switch the using `caret` to perform k-nn as opposed to just writing the code to do it ourselves as we did above? Well, first, our code would have to get a bit more complicated to predict the classes for multiple new observations. Second, our code would also have to get a bit more complicated as we add more variables to our model. Thus for those two reasons, it makes sense to use the `caret` package to keep our code simple, readable and accurate (the less we type, the less mistakes we are likely to make).
+Coding the K-nearest neighbour algorithm in R ourselves would get complicated if we might have to predict the label/class for multiple new observations, or when there 
+are multiple classes and more than two variables. Thankfully, in R, the K-nearest neighbour algorithm is implemented in the [`caret` package](https://topepo.github.io/caret/index.html) (**c**lassification 
+**a**nd **re**gression **t**raining). The `caret` library contains a set of tools to help make and use predictive models, such as classifiers. 
+Using this package will help keep our code simple, readable and accurate; the less we have to code ourselves, the less mistakes we are likely to make.
 
 We start off by loading the `caret` library:
 
@@ -359,7 +393,9 @@ We start off by loading the `caret` library:
 library(caret)
 ```
 
-Let's again suppose we have a new observation with perimeter -1 and concavity 4.2, but its diagnosis is unknown (as in our example above). Suppose we again want to use the perimeter and concavity explanatory variables/predictors to predict the diagnosis class of this observation. Let's pick out our 2 desired variables and store it as a new dataset named `cancer_train`
+Let's again suppose we have a new observation with perimeter -1 and concavity 4.2, but its diagnosis is unknown (as in our example above). Suppose we again want to use the 
+perimeter and concavity explanatory variables/predictors to predict the diagnosis class of this observation. Let's pick out our 2 desired variables and store it as a 
+new dataset named `cancer_train`:
 
 ```{r 05-caret-2}
 cancer_train <- cancer %>%
@@ -367,7 +403,7 @@ cancer_train <- cancer %>%
 head(cancer_train)
 ```
 
-Next, we store the diagnosis class labels (column `Class`) as a vector.
+Next, we store the diagnosis class labels (column `Class`) as a vector:
 ```{r 05-caret-3}
 cancer_labels <- cancer %>% 
   select(Class) %>% 
@@ -375,11 +411,18 @@ cancer_labels <- cancer %>%
 head(cancer_labels)
 ```
 
-We will use the function `train()`, where the argument `x` is a data frame object containing the explanatory variables/predictors, and `y` is a numeric or factor vector containing the outcomes/labels/classes. `x` and `y` should come from your original data frame and be in the same order. The argument `tuneGrid` should be a dataframe with possible "tuning values". For now, just know that this is where we will specify our $k$ (the number of nearest neighbours) and we will use $k =5$ (we will discuss how to choose $k$ in a later section). We will use "knn" as our `method`. *Note - the `caret` package expects `data.frames` and not `tibbles` (which are special kind data frames). This is a bit annoying, and I expect this to change in the future, but for now we have to change `tibbles` to `data.frames` when using `caret`.*
+We will use the function `train()`, where the argument `x` is a data frame object containing the explanatory variables/predictors, and `y` is a numeric or factor vector containing 
+the outcomes/labels/classes. The arguments `x` and `y` should come from the original data frame and be in the same order. The argument `tuneGrid` should be a data frame with 
+possible "tuning values". For now, just know that this is where we will specify $K=5$ (the number of nearest neighbours to vote on the predicted class). We will discuss how to 
+choose $K$ in the next chapter. We will use "knn" as our `method`. 
+
+
 ```{r 05-train}
 k <- data.frame(k = 5)
 model_knn <- train(x = data.frame(cancer_train), y = cancer_labels, method='knn', tuneGrid = k)
 ```
+> **Note:** the `caret` package expects `data.frames` and not `tibbles` (which are special kind data frames). This is a 
+> bit annoying, and will likely change in the future, but for now we have to change `tibbles` to `data.frames` when using `caret`.
 
 Now we can create a `data.frame` with our new observation and predict the label of the new observation using the `predict` function:
 
@@ -388,6 +431,7 @@ new_obs <- data.frame(Perimeter = -1, Concavity = 4.2)
 predict(object = model_knn, new_obs)
 ```
 
-Our model classifies this new observation as malignant. How do we know how well our model did? In later sections, we will discuss ways to evaluate our model.
+Our model classifies this new observation as malignant. In the next chapter, we will discuss evaluating how accurate our predictions are, and selecting the value of $K$
+to maximize that accuracy.
 
 
